<resources>
    <string name="app_name">ThichTruyen</string>

    <string name="notification">Thông báo</string>
    <string name="ok">Đồng ý</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ngontinh">Truyện ngôn tình</string>
    <string name="teen">Truyện teen</string>
    <string name="xuyenkhong">Xuyên không</string>
    <string name="dammy">Đam mỹ</string>
    <string name="voz">Truyện voz</string>
    <string name="kiemhiep">Truyện kiếm hiệp</string>
    <string name="ngan">Truyện ngắn</string>
    <string name="dothi">Đô thị</string>
    <string name="trinhtham">Trinh thám</string>
    <string name="thamkin">Chuyện thầm kín</string>
    <string name="kinhdi">Truyện kinh dị</string>
    <string name="sachiep">Truyện sắc hiệp</string>

    <string name="introduction">Giới thiệu</string>
    <string name="chapter">Chương</string>
    <string name="comment">Bình luận</string>

    <string name="title">Tên truyện</string>
    <string name="author">Tác giả</string>
    <string name="number_chap">Số chương</string>
    <string name="read">Đọc truyện</string>
    <string name="genres">Thể loại</string>
    <string name="descripption">Mô tả</string>
    <string name="count_see">Lượt xem</string>
    <string name="count_like">Lượt thích</string>
    <string name="write">Viết cảm nhận...</string>
    <string name="isLoading">Đang tải dữ liệu</string>
    <string name="facebook_app_id">451418528595990</string>
    <string name="fb_login_protocol_scheme">fb451418528595990</string>
</resources>
