<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_info"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="2"
                    android:src="@drawable/bg1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/TitleInfomation"
                            android:layout_weight="1.5"
                            android:text="@string/title" />

                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>
                        <TextView
                            android:id="@+id/title_book_info"
                            style="@style/TitleContent"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:text="ABC"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_weight="1.5"
                            android:text="@string/author"/>
                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>
                        <TextView
                            android:id="@+id/author_info"
                            style="@style/TitleContent"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:text="ABC"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_weight="1.5"
                            android:text="@string/number_chap"/>
                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>
                        <TextView
                            android:id="@+id/number_chap_info"
                            style="@style/TitleContent"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:text="ABC"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_weight="1.5"
                            android:text="@string/count_see"/>
                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>
                        <TextView
                            android:id="@+id/count_see_info"
                            style="@style/TitleContent"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:text="ABC"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_weight="1.5"
                            android:text="@string/count_like"/>
                        <TextView
                            style="@style/TitleInfomation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>
                        <TextView
                            android:id="@+id/count_like_info"
                            style="@style/TitleContent"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:text="ABC"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorBlack"/>
            <Button
                android:id="@+id/btn_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/read"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorBlack"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    style="@style/TitleInfomation"
                    android:layout_weight="1.5"
                    android:text="@string/genres"/>
                <TextView
                    android:id="@+id/genres_info"
                    style="@style/TitleContent"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="ABC"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorBlack"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp">
                <TextView
                    style="@style/TitleInfomation"
                    android:layout_weight="1.5"
                    android:text="@string/descripption"/>
                <TextView
                    android:id="@+id/description_info"
                    style="@style/TitleContent"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:text="ABC"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>